name:               my-project
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          my-project
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    
                    Handlers
                    MyDatabase
                    Utils
                
  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core
                , sqlite-simple
                , blaze-markup
                , blaze-html
                , shakespeare
                , parallel
                , yesod-auth
                , http-conduit
                , yesod
                , text
                , data-default

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
