name:               my-project
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          my-project
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    
                    Handlers
                    MyDatabase
                    Utils
                    Pi
                
  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core
                , sqlite-simple
                , blaze-markup
                , shakespeare
                , parallel
                , yesod-auth
                , http-conduit
                , yesod
                , text
                
Test-Suite test-lewis
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      NoRestSpec
                      Pi
  hs-source-dirs:     test, .
  build-depends:      base,
                      hspec,
                      parallel,
                      QuickCheck
                      
                      
                      
                

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
